--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
             })
             .then((res) => {
               console.log(res);
-              console.log("Service Worker registered successfully.");
+              console.log("Service Worker registered successfully!");
             })
             .catch((error) =>
               console.log("Service Worker registration failed:", error)
